spacing fixes

--- a/src/components/bestfor.css
+++ b/src/components/bestfor.css
@@ -6,24 +6,13 @@
       margin-bottom:5%;
     }
     .icon-wrap{
-      margin-left:5%;
+      margin:auto;
     }
-    .icon1{
+    .icon{
       width:110px;
-      margin-top:16%;
+      margin-left:10%;
     }
-    .icon2{
-      width:110px;
-      margin-top:16%;
-    }
-    .icon3{
-      width:110px;
-      margin-top:8%;
-    }
-    .icon4{
-      width:110px;
-      margin-top:16%;
-    }
+
     .divider{
       border-right: 1px solid;
     }
