--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -10,8 +10,9 @@
     padding-bottom:7%;
   }
   .computer-header{
-    margin-top:-18%;
+    margin-top:-55%;
     padding-top:0%;
+    padding-bottom:10%;
     padding-left:10%;
     width:400%;
   }
